# GrimoirePlot

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  REUSE.toml  cliff.toml  pyproject.toml
grimoireplot/: __init__.py  client.py  common.py  create_some_plots.py  main.py  models.py  server.py  ui.py  ui_elements.py
tests/: __init__.py  test_server_integration.py
