# SPDX-FileCopyrightText: Copyright © 2026 Idiap Research Institute <contact@idiap.ch>
# SPDX-FileContributor: William Droz <william.droz@idiap.ch>
# SPDX-License-Identifier: MIT

[build-system]
requires = ["setuptools>75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grimoireplot"
version = "0.0.1"
description = "rimoirePlot is a live dashboard of plotly-compatible plots of remote data"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "William Droz", email = "william.droz@idiap.ch" },
]

dependencies = [
    "aiohttp[speedups]>=3.13.3",
    "loguru>=0.7.3",
    "nicegui>=3.5.0,<4",
    "plotly>=6.5.2",
    "pytest[dev]>=9.0.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sqlmodel>=0.0.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
grimoireplot = "grimoireplot.main:main"

[tool.setuptools.package-data]
"*" = ["py.typed"]


[tool.setuptools.packages.find]
where = ["."]
include = ["grimoireplot", "grimoireplot.*"]
