# SPDX-FileCopyrightText: Copyright © 2026 Idiap Research Institute <contact@idiap.ch>
# SPDX-FileContributor: William Droz <william.droz@idiap.ch>
# SPDX-License-Identifier: MIT

[build-system]
requires = ["uv_build>=0.9.25"]
build-backend = "uv_build"

[project]
name = "grimoireplot"
version = "0.0.1"
description = "GrimoirePlot is a live dashboard of plotly-compatible plots of remote data"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "William Droz", email = "william.droz@idiap.ch" },
]

dependencies = [
    "aiohttp[speedups]>=3.13.3",
    "loguru>=0.7.3",
    "nicegui>=3.5.0,<4",
    "plotly>=6.5.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sqlmodel>=0.0.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
grimoireplot = "grimoireplot.main:main"

[tool.uv.build-backend]
module-name = "grimoireplot"
module-root = ""
